<resources>
    <string name="app_name">Sirius</string>
    <string name="button_install_text">Install</string>
    <string name="button_install_description">Install</string>
    <string name="button_back_description">Back</string>
    <string name="game_name">DoTA 2</string>
    <string name="num_of_downloads">70M</string>
    <string name="num_of_downloads_near_mark_text">%s Reviews</string>
    <string name="tag_tool_text_1">MOBA</string>
    <string name="tag_tool_text_2">MULTIPLAYER</string>
    <string name="tag_tool_text_3">STRATEGY</string>
    <string name="dota_2_is_a">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively
        destroy a large structure defended by the opposing team known as the “Ancient”, whilst defending their own.
</string>
    <string name="review_header_text">Review &amp; Ratings</string>
    <string name="rating_mark_text">4.9</string>
    <string name="user_name_text_1">Auguste Conte</string>
    <string name="user_name_text_2">Jang Marcelino</string>
    <string name="date_comment_text_1">February 14, 2019</string>
    <string name="comment_text_1">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
</resources>