<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/background_root_color">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_image_1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@null"
        android:backgroundTintMode="multiply"
        android:src="@drawable/img_user_1"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="36dp"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-2dp"
        android:letterSpacing="0.03"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/user_image_1"
        app:layout_constraintTop_toTopOf="@id/user_image_1"
        tools:text="@string/user_name_text_1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_comment_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:letterSpacing="0.03"
        android:textColor="@color/date_comment_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/user_image_1"
        app:layout_constraintTop_toBottomOf="@id/user_name_1"
        tools:text="@string/date_comment_text_1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/comment_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:letterSpacing="0.04"
        android:textColor="@color/comment_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/user_image_1"
        app:layout_constraintTop_toBottomOf="@id/user_image_1"
        tools:text="@string/comment_text_1" />
</androidx.constraintlayout.widget.ConstraintLayout>