<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_root_color"
    tools:context=".MainActivity">
    <!-- Место для верстки -->
    <!-- Использование NestedScrollView для возможности показа всего контента
         вне зависимости от его объема -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/background_game_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="-126dp"
                android:paddingEnd="-127dp"
                android:paddingBottom="-312dp"
                android:scaleType="fitStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/img_background" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/background_floating_action_button_color"
                android:contentDescription="@string/button_back_description"
                android:src="@drawable/more_square"
                app:borderWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/background_floating_action_button_color"
                android:contentDescription="@string/button_back_description"
                android:src="@drawable/ic_baseline_arrow_back"
                app:borderWidth="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Использование возможностей MaterialButton для создания
                 закругленных краев вверху card -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="296dp"
                android:backgroundTint="@color/background_root_color"
                android:enabled="false"
                android:minHeight="100dp"
                app:cornerRadius="32dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_margin_start_in_game_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/game_logo"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginTop="274dp"
                android:paddingStart="10dp"
                android:paddingTop="13dp"
                android:paddingEnd="5dp"
                android:scaleType="centerInside"
                android:scaleX="2.08"
                android:scaleY="2.08"
                android:src="@drawable/img_logo"
                app:layout_constraintStart_toStartOf="@id/guide_margin_start_in_game_card"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/game_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:letterSpacing="0.03"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/game_logo"
                app:layout_constraintTop_toTopOf="@id/form"
                tools:text="@string/game_name" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="7dp"
                android:progressTint="@color/background_yellow_color"
                android:rating="4.9"
                android:secondaryProgressTint="@color/background_yellow_color"
                app:layout_constraintEnd_toStartOf="@id/guide_for_rating"
                app:layout_constraintStart_toEndOf="@id/game_logo"
                app:layout_constraintTop_toBottomOf="@id/game_name_text" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_for_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="200dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/num_downloads_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:letterSpacing="0.04"
                android:textColor="@color/text_download_color"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                app:layout_constraintStart_toEndOf="@id/guide_for_rating"
                tools:text="@string/num_of_downloads" />
            <!-- Tags -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_tags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="14dp"
                android:layout_marginTop="23dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/game_logo"
                tools:listitem="@layout/list_items_tags" />
            <!-- /Tags -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/game_is_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="top"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="5sp"
                android:textColor="@color/game_is_text_color"
                android:textSize="12sp"
                android:translationY="-2.3sp"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_tags"
                tools:text="@string/dota_2_is_a" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/review_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:letterSpacing="0.03"
                android:textColor="@color/review_header_text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/game_logo"
                app:layout_constraintTop_toBottomOf="@id/game_is_text"
                tools:text="@string/review_header_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rating_float_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:letterSpacing="0.03"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/game_logo"
                app:layout_constraintTop_toBottomOf="@id/review_head"
                tools:text="@string/rating_mark_text" />

            <RatingBar
                android:id="@+id/rating_bar_near_mark"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="29dp"
                android:progressTint="@color/background_yellow_color"
                android:rating="4.9"
                android:secondaryProgressTint="@color/background_yellow_color"
                app:layout_constraintStart_toEndOf="@id/rating_float_text"
                app:layout_constraintTop_toBottomOf="@id/review_head" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/num_downloads_text_near_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="49dp"
                android:letterSpacing="0.04"
                android:textColor="@color/text_downloads_near_mark_color"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/rating_bar_near_mark"
                app:layout_constraintTop_toBottomOf="@id/review_head"
                tools:text="@string/num_of_downloads_near_mark_text" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_vector_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_float_text" />
            <!-- Comments & Ratings -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-4dp"
                android:minWidth="0dp"
                android:minHeight="100dp"
                android:orientation="vertical"
                android:scrollbars="vertical"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/line"
                tools:listitem="@layout/list_items_comments" />
            <!-- /Comments & Ratings -->
            <!-- Создание элемента за границей экрана для препятсвия заграждению
                 installButton отзывов -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_comments"
                tools:text="@string/date_comment_text_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <!--Вне NestedScrollView для видимости кнопки install вне зависимости
        от количества комментариев-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_install"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/background_yellow_color"
        android:contentDescription="@string/button_install_description"
        android:letterSpacing="0.03"
        android:textAllCaps="false"
        android:textColor="@color/background_root_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        tools:text="@string/button_install_text" />
</RelativeLayout>
